--- a/NCERT 11.9.3.Q10/11.9.3.Q10.tex
+++ b/NCERT 11.9.3.Q10/11.9.3.Q10.tex
@@ -57,13 +57,14 @@
 
 
 \vspace{3cm}
-\textbf{Question:} Find the sum to indicated number of terms in the geometric progression \(x^3,x^5,x^7,...n\) terms (if \(x\neq\pm1\)).
+\textbf{Question:} Find the sum to indicated number of terms in the geometric progression $x^3,x^5,x^7,...n$ terms (if $x\neq\pm1$).
 \\
 \solution
 % \fi
 \input{tables/11.9.3.Q10.tab1.tex}
 \newline
 \begin{align}
+	x(n) &= x(0)r^n = x^{2n+3} \\
 	X(z) &= \frac{x(0)}{1-rz^{-1}} \\
 	&= \frac{x^3}{1-x^2z^{-1}} \quad \abs{z}>x^2 \\
 	y(n) &= x(n) * u(n) \\
