--- a/NCERT 11.9.3.Q10/tables/11.9.3.Q10.tab1.tex
+++ b/NCERT 11.9.3.Q10/tables/11.9.3.Q10.tab1.tex
@@ -9,7 +9,7 @@
 \hline
 		$r$ & $x^2$ & Common ratio\\
 \hline
-		$x(n)$ & $x^{2n+3}$ & General term \\
+		$x(n)$ & $x^{2n+3}u(n)$ & General term \\
 \hline
 \end{tabular}
 \caption{Given inputs}
