--- a/NCERT 11.9.3.Q10/11.9.3.Q10.tex
+++ b/NCERT 11.9.3.Q10/11.9.3.Q10.tex
@@ -63,8 +63,8 @@
 % \fi
 \input{tables/11.9.3.Q10.tab1.tex}
 \newline
+From \tabref{tab:1.11.9.3.Q10}
 \begin{align}
-	x(n) &= x(0)r^nu(n) = x^{2n+3}u(n) \\
 	X(z) &= \frac{x(0)}{1-rz^{-1}} \\
 	&= \frac{x^3}{1-x^2z^{-1}} \quad \abs{z}>x^2 \\
 	y(n) &= x(n) * u(n) \\
