--- a/NCERT 11.9.3.Q10/11.9.3.Q10.tex
+++ b/NCERT 11.9.3.Q10/11.9.3.Q10.tex
@@ -71,8 +71,8 @@ From \tabref{tab:1.11.9.3.Q10}
 	Y(z) &= X(z)U(z) \\
 	&= \frac{x^3}{(1-x^2z^{-1})(1-z^{-1})} \quad  \abs{z} > x^2 \cap \abs{z}>1\\
 	&= \frac{x^3}{x^2-1}\brak{\frac{x^2}{1-x^2z^{-1}}-\frac{1}{1-z^{-1}}} \\
-	u(n) &\system{Z} \frac{1}{1-z^{-1}} \\
-	x^{2n+2} u(n) &\system{Z} \frac{x^2}{1-x^2z^{-1}}
+	u(n) &\system{Z} \frac{1}{1-z^{-1}} \quad \abs{z}>1\\
+	x^{2n+2} u(n) &\system{Z} \frac{x^2}{1-x^2z^{-1}} \quad \abs{z}>x^2
 \end{align}
 Taking inverse Z transform of $Y(z)$,
 \begin{align}
