--- a/GATE/bm_28_2021/app/lapl.tex
+++ b/GATE/bm_28_2021/app/lapl.tex
@@ -17,3 +17,4 @@ Let $\frac{\partial y\brak{x,t}}{\partial t}$ be $y_t\brak{x,t}$ and $\frac{\par
  &= \frac{d}{dx}\int_{0}^{\infty}e^{-st}y\brak{x,t}dt \label{L(y_x(x,t))}\\
  &= \frac{dY\brak{x,s}}{dx}
 \end{align}
+\end{enumerate}
