--- a/GATE/bm_28_2021/app/lapl.tex
+++ b/GATE/bm_28_2021/app/lapl.tex
@@ -3,7 +3,7 @@
 \numberwithin{figure}{enumi}
 \numberwithin{table}{enumi}
 \item Laplace Transform of Partial Differentials\\
-Let a function $y\brak{x,t}$ be defined for all $t>0$ and assumed to be bounded. Appling Laplace transform in t considering x as a parameter,
+Let a function $y\brak{x,t}$ be defined for all $t>0$ and assumed to be bounded. Applying Laplace transform in t considering x as a parameter,
 \begin{align}
  \mathcal{L}\brak{y\brak{x,t}} &= \int_{0}^{\infty}e^{-st}y\brak{x,t}dt\\
  &= Y\brak{x,s}
