--- a/Filter_Design/main.tex
+++ b/Filter_Design/main.tex
@@ -323,7 +323,7 @@ Therefore the desired impulse response is :
 \begin{cases} 
     \frac{\sin(w_l n)}{n\pi},  & \text{for } -48\leq n \leq 48 \\
     0 &\text{otherwise}
-\end{cases} \label{eq:h(n)desired_for_LPF}
+\end{cases} \label{eq:h(n)-desired_for_LPF}
 \end{align}
 \end{enumerate}
 \begin{figure}[H]
@@ -353,7 +353,7 @@ Multipying by window function we get :
 \begin{cases} 
    \frac{2\cos{\brak{0.292n\pi}}\sin{\brak{0.025n\pi}}}{n\pi},  & \text{for } -48\leq n \leq 48 \\
     0 &\text{otherwise}
-\end{cases} \label{eq:h(n)desired_for_LPF}
+\end{cases} \label{eq:h_BP(n)desired_for_LPF}
 \end{align}
 
 \begin{figure}[H]
